--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         }
     </style></head>
     <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
-    <title>Duhannn</title>
+    <title>Duhan</title>
     <body oncontextmenu="return false;" unselectable="on" onselectstart="return false;"><canvas width="715" height="974"></canvas>
       <audio id="audio" preload="" autoplay="" loop="">
         <source type="audio/mp3" src="https://cdn.discordapp.com/attachments/790903290702594058/867501916040724520/sicario-lari.mp3">
@@ -673,3 +673,4 @@
             </script>
     
 © 2021 GitHub, Inc.
+        
